# aoc

./: README.md  flake.nix  tests.sh
.github/workflows/: 2022.yml  2024.yml  2025.yml  clippy.yml
2022/: Cargo.toml  README.md
2022/benches/: aoc_benchmark.rs
2022/daymport/: Cargo.toml
2022/daymport/src/: lib.rs
2022/src/: dayselect.rs  main.rs  utils.rs
2022/src/days/: day07.rs  day08.rs  day1.rs  day10.rs  day11.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
aoc2022/src/: dayselect.rs
aoc2022/src/days/: day01.rs  day02.rs  day05.rs  day11.rs
aoc2023/: README.md  mix.exs
aoc2023/inputs/01/: input.txt
aoc2023/lib/: aoc2023.ex  day01.ex  solution.ex
aoc2024/: Cargo.toml  README.md
aoc2024/inputs/1/: day1.php
aoc2024/src/: dayselect.rs  lib.rs  main.rs
aoc2024/src/cursed/: day01.php  day03_part1.php  day03_part2.php
aoc2024/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day3_part1.php  day3_part2.php
aoc2025/: Cargo.toml  README.md  build.rs  criterion.toml
aoc2025/benches/: day01_bench.rs  day02_bench.rs  day03_bench.rs  day04_bench.rs  day05_bench.rs
aoc2025/benches/criterion/: index.html
aoc2025/scripts/: copy-bench-reports.sh
aoc2025/src/: days.rs  dayselect.rs  lib.rs  main.rs  util.rs
aoc2025/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs
aoc2025/template/: day.rs.tera
src/: main.rs
src/days/: day1.rs  day2.rs  day3.rs
y_2022/src/days/: day03.rs  day12.rs
y_2023/: .gitignore  README.md  mix.exs
y_2023/lib/: y2023.ex
y_2023/test/: y2023_test.exs
